--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   margin: 20px;
 }
 
+.page-not-found {
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .message-list {
   padding: 5px 0 0 0;
   margin: 0;
