--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
   padding: 0;
 }
 
-.chat-item {
+.chat-item, .active-chat-item {
   padding: 10px;
   font-weight: bold;
 }
@@ -41,21 +41,34 @@ body {
   background-color: #e0e0e0;
 }
 
-.chat-item:focus {
+.active-chat-item {
   background-color: cornflowerblue;
   color: white;
 }
 
 .message-area {
   flex: 1 1 auto;
-  background-color: #daeaf1;
   height: 100%;
-  padding: 5px;
   display: flex;
   flex-flow: column;
 }
 
+.chat-header {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.chat-header-name {
+  font-weight: bold;
+}
+
+.chat-header-members {
+  font-size: 16px;
+  color: gray;
+}
+
 .message-list {
+  background-color: #daeaf1;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -85,8 +98,15 @@ body {
 
 .message-senton {
   font-size: 15px;
-  color: grey;
+  color: gray;
   text-align: right;
+}
+
+.input-area {
+  background-color: #daeaf1;
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: row;
 }
 
 input {
@@ -106,12 +126,6 @@ input {
   background-color: cornflowerblue;
   color: white;
   flex: 0 1 auto; 
-}
-
-.input-area {
-  flex: 0 1 auto;
-  display: flex;
-  flex-direction: row;
 }
 
 .login-form {
@@ -154,4 +168,46 @@ input {
   margin-bottom: 5px;
   color: red;
   font-weight: bold;
+}
+
+.chat-info-background {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chat-info {
+  width: 500px;
+  height: 300px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.chat-info-name {
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.chat-members-label {
+  margin: 10px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.chat-members-list {
+  list-style: none;
+}
+
+.chat-members-list-item {
+  margin: 20px;
 }
