--- a/src/index.css
+++ b/src/index.css
@@ -23,18 +23,27 @@ body {
   flex-direction: row;
 }
 
-.chat-list {
+.chat-area {
   flex: 0 1 auto;
   width: 200px;
   float: left;
-  margin: 10px;
+  margin: 0;
+  padding: 0;
+  border-right: 1px solid rgb(200, 200, 200);
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-list {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
 .chat-item, .active-chat-item {
   padding: 10px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .chat-item:hover {
@@ -46,6 +55,16 @@ body {
   color: white;
 }
 
+.profile-button {
+  margin-top: auto;
+  padding: 10px;
+  cursor: pointer;
+}
+
+svg {
+  vertical-align: text-top;
+}
+
 .message-area {
   flex: 1 1 auto;
   height: 100%;
@@ -55,6 +74,7 @@ body {
 
 .chat-header {
   padding: 10px;
+  padding-left: 20px;
   cursor: pointer;
 }
 
@@ -170,7 +190,7 @@ input {
   font-weight: bold;
 }
 
-.chat-info-background {
+.modal-background {
   position: fixed;
   left: 0;
   top: 0;
@@ -182,14 +202,14 @@ input {
   justify-content: center;
 }
 
-.chat-info {
+.modal {
   width: 500px;
   height: 300px;
   background-color: white;
   border-radius: 10px;
 }
 
-.chat-info-name {
+.chat-info-name, .profile-info-name {
   font-weight: bold;
   font-size: 24px;
   margin-top: 10px;
@@ -202,6 +222,10 @@ input {
   margin: 10px;
   margin-top: 20px;
   font-weight: bold;
+}
+
+.chat-members-icon {
+  margin-right: 10px;
 }
 
 .chat-members-list {
