--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
 
 .chat-area {
   flex: 0 1 auto;
-  width: 200px;
+  width: 300px;
   float: left;
   margin: 0;
   padding: 0;
@@ -41,9 +41,10 @@ body {
 }
 
 .chat-item, .active-chat-item {
-  padding: 10px;
-  font-weight: bold;
   cursor: pointer;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
 }
 
 .chat-item:hover {
@@ -53,6 +54,17 @@ body {
 .active-chat-item {
   background-color: cornflowerblue;
   color: white;
+}
+
+.chat-profile-photo {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.chat-name {
+  font-weight: bold;
+  margin: 10px;
 }
 
 .profile-button {
@@ -91,18 +103,35 @@ svg {
   background-color: #daeaf1;
   padding: 0;
   margin: 0;
-  list-style: none;
-  overflow-y: scroll;
+  overflow-y: auto;
   flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .message {
+  padding: 0;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.message-profile-photo {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px
+}
+
+.message-bubble {
   background-color: white;
   width: fit-content;
   max-width: 400px;
   border-radius: 10px;
   padding: 5px 10px 5px 10px;
-  margin: 10px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .message-sender {
@@ -204,9 +233,10 @@ input {
 
 .modal {
   width: 500px;
-  height: 300px;
+  height: 80vh;
   background-color: white;
   border-radius: 10px;
+  overflow-y: auto;
 }
 
 .chat-info-name, .profile-info-name {
@@ -215,6 +245,7 @@ input {
   margin-top: 10px;
   margin-bottom: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -228,10 +259,37 @@ input {
   margin-right: 10px;
 }
 
-.chat-members-list {
-  list-style: none;
-}
-
 .chat-members-list-item {
   margin: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.chat-members-item-name {
+  font-weight: bold;
+  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-info-photo-and-name {
+  display: flex;
+  flex-direction: row;
+}
+
+.profile-info-photo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: 10px;
+  margin-right: 20px;
+}
+
+.upload-profile-photo {
+  margin: 10px;
+  border-radius: 5px;
+  font-size: 18px;
+  background-color: cornflowerblue;
+  color: white;
 }
