--- a/src/index.css
+++ b/src/index.css
@@ -142,6 +142,7 @@ svg {
   padding: 0;
   margin: 0;
   overflow-y: auto;
+  scroll-behavior: auto;
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
