--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
 
 .chat-area {
   flex: 0 1 auto;
-  width: 300px;
+  width: 20%;
   float: left;
   margin: 0;
   padding: 0;
@@ -35,7 +35,6 @@ body {
 }
 
 .chat-list {
-  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -105,8 +104,13 @@ body {
   text-overflow: ellipsis;
 }
 
-.profile-button {
+.friend-button {
   margin-top: auto;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.profile-button {
   padding: 10px;
   cursor: pointer;
 }
@@ -271,8 +275,8 @@ input {
 }
 
 .modal {
-  width: 500px;
-  height: 80vh;
+  width: 30%;
+  height: 80%;
   background-color: white;
   border-radius: 10px;
   overflow-y: auto;
@@ -288,7 +292,7 @@ input {
   justify-content: center;
 }
 
-.chat-members-label {
+.chat-members-label, .friends-label {
   margin: 10px;
   margin-top: 20px;
   font-weight: bold;
@@ -298,13 +302,13 @@ input {
   margin-right: 10px;
 }
 
-.chat-members-list-item {
+.user-list-item {
   margin: 20px;
   display: flex;
   flex-direction: row;
 }
 
-.chat-members-item-name {
+.user-list-item-name {
   font-weight: bold;
   margin-left: 10px;
   display: flex;
