--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@ button:active {
   transform: scale(0.95);
 }
 
+svg {
+  vertical-align: text-top;
+}
+
 #root {
   height: 100vh;
 }
@@ -36,6 +40,7 @@ button:active {
 .chat-area {
   flex: 0 1 auto;
   width: 20%;
+  min-width: 250px;
   float: left;
   margin: 0;
   padding: 0;
@@ -118,15 +123,33 @@ button:active {
   margin-top: auto;
   padding: 10px;
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+}
+
+.friend-label {
+  min-height: 22px;
+}
+
+.friend-request-count {
+  margin-left: auto;
+  padding-left: 5px;
+  padding-right: 5px;
+  min-width: 22px;
+  min-height: 22px;
+  border-radius: 1000px;
+  background-color: cornflowerblue;
+  color: white;
+  font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .profile-button {
   padding: 10px;
   cursor: pointer;
-}
-
-svg {
-  vertical-align: text-top;
 }
 
 .message-area {
@@ -204,11 +227,20 @@ svg {
   text-align: right;
 }
 
-.input-area {
-  background-color: #daeaf1;
+.new-message-input-area, .add-friend-input-area {
   flex: 0 1 auto;
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.new-message-input-area {
+  background-color: #daeaf1;
+}
+
+.add-friend-input-area {
+  margin-left: 10px;
+  margin-right: 5px;
 }
 
 input {
@@ -286,6 +318,7 @@ input {
 
 .modal {
   width: 30%;
+  min-width: 400px;
   height: 80%;
   background-color: white;
   border-radius: 10px;
@@ -348,12 +381,18 @@ input {
   font-weight: bold;
 }
 
+.add-friend-info {
+  margin-left: 5px;
+  font-size: 16px;
+}
+
 .chat-members-icon {
   margin-right: 10px;
 }
 
 .user-list-item {
   margin: 20px;
+  margin-right: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -367,12 +406,35 @@ input {
   align-items: center;
 }
 
-.user-list-item-remove-button {
-  background-color: red;
+.friend-remove-button, .friend-request-accept-button, .friend-request-reject-button {
   color: white;
+  height: fit-content;
+}
+
+.friend-remove-button {
+  background-color: red;
   margin-left: auto;
   padding: 5px;
-  height: fit-content;
+}
+
+.friend-request-accept-button, .friend-request-reject-button {
+  background-color: white;
+  font-size: 28px;
+  padding: 0;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.friend-request-accept-button {
+  color: green;
+  margin-left: auto;
+}
+
+.friend-request-reject-button {
+  color: red;
+  margin-left: 10px;
 }
 
 .profile-info-photo-and-name {
